@@ -21,4 +21,5 @@ r27 don't ask about r24 - r26. I'm dumb. anyway, bug fixes, added new profile, h
 r28 many whelps. handled! no fix for ticket #6 yet. more enUS localizations
 r29 fixed tickets 6, 7, and hopefully 8. added deDE localization and borders, updated frFR localization
 r30 still no fix for ticket 8, sorry. fixes for enUS (thanks, Farook!) Farook and black_mystics working on deDE
-r31 oneforeignshore and I (mostly him) fixed LOTS of issues. including localizations again. 
+r31 oneforeignshore and I (mostly him) fixed LOTS of issues. including localizations again. fixed ticket 8
+r32 most of the options working. Test bars still non functional. need to test in a party or raid
